force-app/main/default/objects/Lead/fields/Acclaim_Retro_Badge_Consent__c.field-meta.xml
<CustomField>
    <fullName>Acclaim_Retro_Badge_Consent__c</fullName>
    <description>Field added to Lead object in attempt to solve for HubSpot mapping consent date to both contact and lead objects.  Reference Link: https://knowledge.hubspot.com/integrations/sync-salesforce-leads-and-contacts-to-hubspot

MB 3/30/22</description>
    <label>Credly Consent Date (Lead)</label>
    <type>Date</type>
</CustomField>