force-app/main/default/objects/Lead/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked if the account/contact is deemed active.</description>
    <inlineHelpText>Is the account/contact active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>