force-app/main/default/objects/Lead/fields/Advisory_Needs__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Needs__c</fullName>
    <label>Advisory Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I need to accelerate change management capability</fullName>
            </value>
            <value>
                <fullName>I need support delivering on a must-win project</fullName>
            </value>
            <value>
                <fullName>I need to integrate change management with other disciplines</fullName>
            </value>
            <value>
                <fullName>I need to better manage my Change Portfolio</fullName>
            </value>
            <value>
                <fullName>I need to build an enterprise change Management Strategy</fullName>
            </value>
            <value>
                <fullName>I need to measure the impact of Change</fullName>
            </value>
            <value>
                <fullName>I need guidance from Prosci</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>