force-app/main/default/objects/Lead/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New to CM – Change Management Basics</fullName>
            </value>
            <value>
                <fullName>ADKAR – Individual Change Management</fullName>
            </value>
            <value>
                <fullName>3-PhaseProcess–Project-basedChangeMgmt</fullName>
            </value>
            <value>
                <fullName>ECM – Enterprise Change Management</fullName>
            </value>
            <value>
                <fullName>Value of CM – ROI and Business Case</fullName>
            </value>
            <value>
                <fullName>Sponsorship – Building Change Leadership</fullName>
            </value>
            <value>
                <fullName>Project Management - PM/CM Integration</fullName>
            </value>
            <value>
                <fullName>Research – Best Practices Data</fullName>
            </value>
            <value>
                <fullName>Managing Employees–F-line MgrPerspective</fullName>
            </value>
            <value>
                <fullName>Tools – Products and Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>