force-app/main/default/objects/Lead/fields/BillingPostCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostCode__c</fullName>
    <label>BillingPostCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>