force-app/main/default/objects/Lead/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>BillingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>