force-app/main/default/objects/Lead/fields/BillingSuburb__c.field-meta.xml
<CustomField>
    <fullName>BillingSuburb__c</fullName>
    <label>BillingSuburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>