force-app/main/default/objects/Lead/fields/bookstore_amount__c.field-meta.xml
<CustomField>
    <fullName>bookstore_amount__c</fullName>
    <label>bookstore_amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>