force-app/main/default/objects/Lead/fields/Bookstore_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Bookstore_Purchase__c</fullName>
    <label>Bookstore_Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>