force-app/main/default/objects/Lead/fields/CC_Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_Joined__c</fullName>
    <label>CC_Date_Joined</label>
    <type>Date</type>
</CustomField>