force-app/main/default/objects/Lead/fields/CC_Date_of_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Opt_In__c</fullName>
    <label>CC_Date_of_Opt_In</label>
    <type>Date</type>
</CustomField>