force-app/main/default/objects/Lead/fields/CC_Email_Opt_In_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Opt_In_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC_Email_Opt_In_2</label>
    <type>Checkbox</type>
</CustomField>