force-app/main/default/objects/Lead/fields/Change_Community_Member__c.field-meta.xml
<CustomField>
    <fullName>Change_Community_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change_Community_Member</label>
    <type>Checkbox</type>
</CustomField>