force-app/main/default/objects/Lead/fields/City_2__c.field-meta.xml
<CustomField>
    <fullName>City_2__c</fullName>
    <label>City_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>