force-app/main/default/objects/Lead/fields/City_3__c.field-meta.xml
<CustomField>
    <fullName>City_3__c</fullName>
    <label>City_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>