force-app/main/default/objects/Lead/fields/Comments_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Website__c</fullName>
    <label>Comments_from_Website</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>