force-app/main/default/objects/Lead/fields/Country_3__c.field-meta.xml
<CustomField>
    <fullName>Country_3__c</fullName>
    <label>Country_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>