force-app/main/default/objects/Lead/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Full name of country to match Lead&apos;s Country Code</description>
    <label>Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>