force-app/main/default/objects/Lead/fields/Delegates_Type__c.field-meta.xml
<CustomField>
    <fullName>Delegates_Type__c</fullName>
    <label>Delegates_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMI/ACMP discount - AUD $5700.00</fullName>
            </value>
            <value>
                <fullName>CMI/ACMP Discount - NZD $6700.00</fullName>
            </value>
            <value>
                <fullName>Project Team Discount - AUD $5355.00</fullName>
            </value>
            <value>
                <fullName>Project Team Discount - NZD $6255.00</fullName>
            </value>
            <value>
                <fullName>Single delegate - AUD $5950.00</fullName>
            </value>
            <value>
                <fullName>Single delegate - NZD $6950.00</fullName>
            </value>
            <value>
                <fullName>Single Delegate - non-res - AUD $4,950.00</fullName>
            </value>
            <value>
                <fullName>CMI/ACMP Discount - non-res - AUD $4,700.00</fullName>
            </value>
            <value>
                <fullName>Project Team Discount - non-res - AUD $4,455.00</fullName>
            </value>
            <value>
                <fullName>Single delegate - $5,950.00</fullName>
            </value>
            <value>
                <fullName>CMI/ACMP discount - $5,700.00</fullName>
            </value>
            <value>
                <fullName>Team discount - $5,255.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>