force-app/main/default/objects/Lead/fields/Dietary_Requirements_2__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements_2__c</fullName>
    <label>Dietary_Requirements_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>