force-app/main/default/objects/Lead/fields/Drupal_ID__c.field-meta.xml
<CustomField>
    <fullName>Drupal_ID__c</fullName>
    <externalId>true</externalId>
    <label>Drupal_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>