force-app/main/default/objects/Lead/fields/Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_2__c</fullName>
    <label>Email_Address_2</label>
    <type>Email</type>
</CustomField>