force-app/main/default/objects/Lead/fields/Email_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_3__c</fullName>
    <label>Email_Address_3</label>
    <type>Email</type>
</CustomField>