force-app/main/default/objects/Lead/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email_Address</label>
    <type>Email</type>
</CustomField>