force-app/main/default/objects/Lead/fields/Emergency_contact_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_contact_1__c</fullName>
    <label>Emergency_contact_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>