force-app/main/default/objects/Lead/fields/Emergency_contact_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_contact_2__c</fullName>
    <label>Emergency_contact_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>