force-app/main/default/objects/Lead/fields/Emergency_contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_contact__c</fullName>
    <label>Emergency_contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>