force-app/main/default/objects/Lead/fields/Emergency_Contact_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_2__c</fullName>
    <label>Emergency_Contact_Phone_2</label>
    <type>Phone</type>
</CustomField>