force-app/main/default/objects/Lead/fields/Emergency_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_contact_phone__c</fullName>
    <label>Emergency_contact_phone</label>
    <type>Phone</type>
</CustomField>