force-app/main/default/objects/Lead/fields/First_name_2__c.field-meta.xml
<CustomField>
    <fullName>First_name_2__c</fullName>
    <label>First_name_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>