force-app/main/default/objects/Lead/fields/I_need_guidance_from_Prosci__c.field-meta.xml
<CustomField>
    <fullName>I_need_guidance_from_Prosci__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guidance from Prosci</label>
    <type>Checkbox</type>
</CustomField>