force-app/main/default/objects/Lead/fields/I_need_support_building_change_capabilit__c.field-meta.xml
<CustomField>
    <fullName>I_need_support_building_change_capabilit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I need support building change capability</description>
    <label>Support building change capabilities</label>
    <type>Checkbox</type>
</CustomField>