force-app/main/default/objects/Lead/fields/I_need_support_delivering_on_a_must_win__c.field-meta.xml
<CustomField>
    <fullName>I_need_support_delivering_on_a_must_win__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support delivering on a must-win</label>
    <type>Checkbox</type>
</CustomField>