force-app/main/default/objects/Lead/fields/I_need_to_accelerate_CM_capability__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_accelerate_CM_capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accelerate CM capability</label>
    <type>Checkbox</type>
</CustomField>