force-app/main/default/objects/Lead/fields/I_need_to_better_manage_my_change_portfo__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_better_manage_my_change_portfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Better manage my change portfolio</label>
    <type>Checkbox</type>
</CustomField>