force-app/main/default/objects/Lead/fields/I_need_to_build_an_ECM_Strategy__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_build_an_ECM_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build an ECM Strategy</label>
    <type>Checkbox</type>
</CustomField>