force-app/main/default/objects/Lead/fields/I_need_to_integrate_CM_with_other_discip__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_integrate_CM_with_other_discip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrate CM with other disciplines</label>
    <type>Checkbox</type>
</CustomField>