force-app/main/default/objects/Lead/fields/I_need_to_measure_the_impact_of_change__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_measure_the_impact_of_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measure the impact of change</label>
    <type>Checkbox</type>
</CustomField>