force-app/main/default/objects/Lead/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>40</length>
    <type>Text</type>
</CustomField>