force-app/main/default/objects/Lead/fields/Job_Title_2__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_2__c</fullName>
    <label>Job_Title_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>