force-app/main/default/objects/Lead/fields/Job_Title_3__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_3__c</fullName>
    <label>Job_Title_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>