force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job_Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>