force-app/main/default/objects/Lead/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <description>Lists the language(s) spoken in Lead&apos;s country</description>
    <label>Language(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>