force-app/main/default/objects/Lead/fields/Lead_Domain__c.field-meta.xml
<CustomField>
    <fullName>Lead_Domain__c</fullName>
    <formula>MID(Email, FIND(&apos;@&apos;, Email) + 1, LEN(Email) - FIND(&apos;@&apos;, Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Domain</label>
    <type>Text</type>
</CustomField>