force-app/main/default/objects/Lead/fields/Lead_Gen_Source_Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Source_Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This value is set on leads created by the Session Notes - Lead #1-3 flows</description>
    <label>Lead Gen Source Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>