force-app/main/default/objects/Lead/fields/Lead_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Division__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner: Division</label>
    <type>Text</type>
</CustomField>