force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>What type of Lead is this/Where did it come from on the website</description>
    <inlineHelpText>What type of lead is this? What is the customer interested in?</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Bridge Option</fullName>
            </value>
            <value>
                <fullName>Proxima</fullName>
            </value>
            <value>
                <fullName>Advanced Certifications</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Solutions for Organizations</fullName>
            </value>
            <value>
                <fullName>Enterprise Training</fullName>
            </value>
            <value>
                <fullName>eLearning for Organizations</fullName>
            </value>
            <value>
                <fullName>Speaking Engagements</fullName>
            </value>
            <value>
                <fullName>GAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>