force-app/main/default/objects/Lead/fields/Licensing_Type__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Type__c</fullName>
    <description>What type of licensing are you interested in?</description>
    <inlineHelpText>What type of licensing are you interested in?</inlineHelpText>
    <label>Licensing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADKAR Enablement</fullName>
            </value>
            <value>
                <fullName>Enterprise Change Management</fullName>
            </value>
            <value>
                <fullName>Organizational Change Competency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>