force-app/main/default/objects/Lead/fields/Master_Instructor_Lead_Generator__c.field-meta.xml
<CustomField>
    <fullName>Master_Instructor_Lead_Generator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This value is set on leads created by the Session Notes - Lead #1-3 flows</description>
    <label>Instructor Lead Generator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Instructor Lead Generator)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>