force-app/main/default/objects/Lead/fields/Number_of_Participants_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants_Picklist__c</fullName>
    <label>Number of Participants Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>