force-app/main/default/objects/Lead/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>EFT/Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>