force-app/main/default/objects/Lead/fields/Phone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_2__c</fullName>
    <label>Phone_Number 2</label>
    <type>Phone</type>
</CustomField>