force-app/main/default/objects/Lead/fields/Phone_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_3__c</fullName>
    <label>Phone_Number 3</label>
    <type>Phone</type>
</CustomField>