force-app/main/default/objects/Lead/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone_Number</label>
    <type>Phone</type>
</CustomField>