force-app/main/default/objects/Lead/fields/Postage_and_handling__c.field-meta.xml
<CustomField>
    <fullName>Postage_and_handling__c</fullName>
    <label>Postage and handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>