force-app/main/default/objects/Lead/fields/Postcode_1__c.field-meta.xml
<CustomField>
    <fullName>Postcode_1__c</fullName>
    <label>Postcode_1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>