force-app/main/default/objects/Lead/fields/Postcode_2__c.field-meta.xml
<CustomField>
    <fullName>Postcode_2__c</fullName>
    <label>Postcode_2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>