force-app/main/default/objects/Lead/fields/Postcode_3__c.field-meta.xml
<CustomField>
    <fullName>Postcode_3__c</fullName>
    <label>Postcode_3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>