force-app/main/default/objects/Lead/fields/Previously_Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Previously_Existing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When a lead is created from a Hubspot generated task with a previously existing contact, this field is populated by the &quot;Task - Lead from form with previously existing contact&quot; flow.</description>
    <label>Previously Existing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Previously Existing Contact)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>