force-app/main/default/objects/Lead/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Practitioner Certification</fullName>
            </value>
            <value>
                <fullName>Change Management Sponsor Briefing</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop</fullName>
            </value>
            <value>
                <fullName>Methodology Application Program (MAP)</fullName>
            </value>
            <value>
                <fullName>Train-the-Trainer</fullName>
            </value>
            <value>
                <fullName>Integrating Agile and Change Management</fullName>
            </value>
            <value>
                <fullName>Taking Charge of Change</fullName>
            </value>
            <value>
                <fullName>Leading Your Team Through Change</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Other (please share in comments)</fullName>
            </value>
            <value>
                <fullName>Improve Project Health</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery 1</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>