force-app/main/default/objects/Lead/fields/Prosci_Kaiya_AI_Tool__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Kaiya_AI_Tool__c</fullName>
    <label>Prosci Kaiya AI Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prosci_Kaiya_AI_Tool</valueSetName>
    </valueSet>
</CustomField>