force-app/main/default/objects/Lead/fields/Queue_Family__c.field-meta.xml
<CustomField>
    <fullName>Queue_Family__c</fullName>
    <description>Aligns the Lead with its appropriate Queue by referencing its Country Code</description>
    <label>Queue Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>