force-app/main/default/objects/Lead/fields/Reason_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Contact__c</fullName>
    <label>Reason for Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training Registration or Payment Questions</fullName>
                <label>Training registration or payment questions</label>
            </value>
            <value>
                <fullName>Bookstore Orders And Payment Questions</fullName>
                <label>Bookstore orders and payment questions</label>
            </value>
            <value>
                <fullName>Prosci Portal And Digital Products Suite Support</fullName>
            </value>
            <value>
                <fullName>Private Training For Your Organization or Team</fullName>
            </value>
            <value>
                <fullName>Global Training Availability (Outside of US, Canada, Australia, and New Zealand)</fullName>
                <label>Global training availability (outside of US, Canada, Australia, and New Zealand)</label>
            </value>
            <value>
                <fullName>Digital Badges, Proof Of Certification Or Attendance</fullName>
                <label>Digital badges, proof of certification or attendance</label>
            </value>
            <value>
                <fullName>Enterprise Access To Prosci&apos;s World-Class Tools</fullName>
            </value>
            <value>
                <fullName>Advisory And Consulting Services</fullName>
                <label>Advisory and consulting services</label>
            </value>
            <value>
                <fullName>Change of Company or Email Address</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>