force-app/main/default/objects/Lead/fields/Speaking_Engagement_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_Event_Location__c</fullName>
    <label>Speaking Engagement Event Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>