force-app/main/default/objects/Lead/fields/Special_Requirements_1__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_1__c</fullName>
    <label>Special Requirements 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>