force-app/main/default/objects/Lead/fields/Special_Requirements_2__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_2__c</fullName>
    <label>Special Requirements 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>