force-app/main/default/objects/Lead/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <label>State_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>