force-app/main/default/objects/Lead/fields/State_3__c.field-meta.xml
<CustomField>
    <fullName>State_3__c</fullName>
    <label>State_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>