force-app/main/default/objects/Lead/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>