force-app/main/default/objects/Lead/fields/Surname_1__c.field-meta.xml
<CustomField>
    <fullName>Surname_1__c</fullName>
    <label>Surname_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>