force-app/main/default/objects/Lead/fields/Surname_2__c.field-meta.xml
<CustomField>
    <fullName>Surname_2__c</fullName>
    <label>Surname_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>