force-app/main/default/objects/Lead/fields/Surname_3__c.field-meta.xml
<CustomField>
    <fullName>Surname_3__c</fullName>
    <label>Surname_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>